# graphina

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  codecov.yml  deny.toml  flake.nix  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.github/: FUNDING.yml
benches/: README.md  algorithm_benchmarks.rs  graph_benchmarks.rs  project_benchmarks.rs
benchmarks/graphina/: Cargo.toml  README.md
benchmarks/graphina/src/: main.rs
comparisons/: visualize.py
comparisons/graphina/: Cargo.toml  README.md
comparisons/graphina/src/: main.rs
docs/: ALGORITHM_COMPLEXITY.md  ANALYSIS_SUMMARY.md  API_IMPROVEMENTS.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURAL_ANALYSIS_v0.4.0.md  ARCHITECTURAL_ISSUES.md  ARCHITECTURE.md  BATCH_OPERATIONS.md  BENCHMARKS.md  BUGFIXES_2025.md  BUGS_FIXED_SUMMARY.md  BUG_FIXES.md  BUG_FIXES_2025.md  BUG_FIXES_ALPHA.md  BUG_FIXES_ALPHA_v0.4.0.md  BUG_FIXES_SUMMARY.md  COMPLETE_SUMMARY.md  CORE_MODULE_ANALYSIS_FINAL.md  CORE_MODULE_BUGS.md  ERROR_CONSOLIDATION.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_BUG_FIX_SUMMARY.md  FINAL_SUMMARY.md  GRAPH_METRICS.md  GRAPH_SERIALIZATION.md  GRAPH_SUBGRAPHS.md  GRAPH_VALIDATION.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  NEXT_STEPS_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  SHORT_TERM_IMPROVEMENTS_SUMMARY.md  SUMMARY.md  SUMMARY_BUG_FIXES.md  TEST_REORGANIZATION.md  TEST_REORGANIZATION_SUMMARY.md  VISUALIZATION_FEATURE.md  index.md
examples/: README.md  TUTORIAL.md  centrality.rs  centrality_eigenvector.py  centrality_eigenvector.rs  centrality_katz.py  centrality_katz.rs  path_dijkstra.rs  visualization.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_louvain.rs
pygraphina/: Cargo.toml  README.md  ROADMAP.md  mkdocs.yml  pygraphina.pyi  pyproject.toml  stubtest_allowlist.txt  test_documentation.py
pygraphina/docs/: README.md  contributing.md  index.md
pygraphina/docs/api/: digraph.md  graph.md
pygraphina/docs/api/approximation/: clique.md  clustering.md  connectivity.md  diameter.md  independent_set.md  index.md  ramsey.md  subgraph.md  treewidth.md  tsp.md  vertex_cover.md
pygraphina/docs/api/centrality/: betweenness.md  closeness.md  degree.md  eigenvector.md  harmonic.md  index.md  katz.md  pagerank.md  reaching.md
pygraphina/docs/api/community/: connected_components.md  girvan_newman.md  index.md  label_propagation.md  louvain.md  spectral.md
pygraphina/docs/api/core/: builders.md  generators.md  interop.md  io.md  paths.md  views.md
pygraphina/docs/api/links/: allocation.md  attachment.md  centrality.md  index.md  similarity.md
pygraphina/docs/api/metrics/: graph.md  node.md
pygraphina/docs/api/mst/: index.md
pygraphina/docs/api/parallel/: index.md
pygraphina/docs/api/subgraphs/: index.md
pygraphina/docs/api/traversal/: basic.md  index.md
pygraphina/docs/api/visualization/: index.md
pygraphina/docs/examples/: algorithms.md  basic.md  centrality.md  community.md  links.md
pygraphina/docs/getting-started/: concepts.md  installation.md  quickstart.md
pygraphina/examples/: README.md
pygraphina/pygraphina/: __init__.py  __init__.pyi  approximation.pyi  centrality.pyi  community.pyi  core.pyi  links.pyi  metrics.pyi  mst.pyi  parallel.pyi  subgraphs.pyi  traversal.pyi
pygraphina/src/: digraph.rs  graph.rs  lib.rs  pygraphina.pyi
pygraphina/src/approximation/: clique.rs  clustering.rs  connectivity.rs  diameter.rs  independent_set.rs  mod.rs  ramsey.rs  subgraph.rs  treewidth.rs  vertex_cover.rs
pygraphina/src/centrality/: betweenness.rs  closeness.rs  degree.rs  eigenvector.rs  harmonic.rs  katz.rs  mod.rs  pagerank.rs  reaching.rs  utils.rs
pygraphina/src/community/: connected_components.rs  girvan_newman.rs  label_propagation.rs  louvain.rs  mod.rs  spectral.rs
pygraphina/src/core/: basic_ops.rs  digraph.rs  digraph_ops.rs  exceptions.rs  generators.rs  graph.rs  graph_ops.rs  id_map.rs  io.rs  metrics.rs  mod.rs  mst.rs  parallel.rs  paths.rs  subgraphs.rs  traversal.rs  validation.rs
pygraphina/src/core/views/: degree.rs  edge.rs  mod.rs  node.rs
pygraphina/src/links/: allocation.rs  attachment.rs  centrality.rs  mod.rs  similarity.rs
pygraphina/src/metrics/: mod.rs
pygraphina/src/mst/: mod.rs
pygraphina/src/parallel/: mod.rs
pygraphina/src/subgraphs/: mod.rs
pygraphina/src/traversal/: mod.rs
pygraphina/src/views/: degree.rs  edge.rs  node.rs
pygraphina/src/visualization/: mod.rs
pygraphina/tests/: conftest.py  test_bug_fixes.py  test_core_metrics_validation.py  test_digraph_expanded.py  test_networkx_interop_fixed.py  test_regressions.py
pygraphina/tests/approximation/: test_approximation.py  test_new_approximation.py
pygraphina/tests/centrality/: test_centrality.py  test_pagerank.py  test_personalized_pagerank.py  test_reaching.py
pygraphina/tests/community/: test_community.py
pygraphina/tests/core/: test_core_metrics_validation.py  test_core_types.py  test_dataframe_interop.py  test_digraph.py  test_filters.py  test_generators.py  test_mst.py  test_networkx_interop.py  test_parallel.py  test_pythonic_aliases.py  test_pythonic_api.py  test_subgraphs.py  test_views.py  test_visualization.py
pygraphina/tests/links/: test_links.py  test_new_links.py
scripts/: gen_oracle_centrality_fixtures.py  gen_oracle_community_fixtures.py  gen_oracle_directed_centrality_fixtures.py  gen_oracle_directed_fixtures.py  gen_oracle_fixtures.py  gen_oracle_links_fixtures.py  gen_oracle_metrics_fixtures.py  gen_oracle_spectral_fixtures.py
src/: lib.rs  logging.rs  settings.rs
tests/: README.md  algorithm_tests.rs  approximation_algorithms_tests.rs  approximation_invariants_tests.rs  centrality_algorithms_tests.rs  core_exceptions_tests.rs  core_generator_tests.rs  core_io_test.rs  core_mst_tests.rs  core_paths_tests.rs  e2e_tests.rs  integration_real_graphs.rs  integration_tests.rs  links_algorithms_tests.rs  oracle_centrality_tests.rs  oracle_community_tests.rs  oracle_directed_centrality_tests.rs  oracle_directed_tests.rs  oracle_links_tests.rs  oracle_metrics_tests.rs  (+42 more)
(+164 files in other folders)
