[package]
name = "graphina"
version = "0.2.0"
description = "A graph data science library for Rust"
repository = "https://github.com/habedi/graphina"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["graph-theory", "data-science", "graph-algorithms", "graph-analytics"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/graphina"
documentation = "https://docs.rs/graphina"
categories = ["data-structures", "algorithms"]
edition = "2021"
rust-version = "1.83"

resolver = "2"

include = [
    "docs/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE"
]

[lib]
name = "graphina"
path = "src/lib.rs"

[[bin]]
name = "graphina"
path = "src/main.rs"

[features]
default = []  # No features enabled by default
binaries = []

[dependencies]
ctor = "0.2.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.0"
sprs = "0.11.3"
ordered-float = "5.0.0"
rayon = "1.10.0"
nalgebra = "0.33.2"
petgraph = { version = "0.7.1", features = ["graphmap", "stable_graph", "matrix_graph", "serde-1", "rayon"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "project_benchmarks"
harness = false

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true

[profile.bench]
debug = true
