[package]
name = "graphina"
version = "0.4.0"
description = "A graph data science library for Rust"
repository = "https://github.com/habedi/graphina"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["graph-theory", "data-science", "graph-algorithms", "graph-analytics"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/graphina"
documentation = "https://docs.rs/graphina"
categories = ["data-structures", "algorithms"]
edition = "2024"
rust-version = "1.86.0"

resolver = "2"

include = [
  "docs/**/*",
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE"
]

[lib]
name = "graphina"
path = "src/lib.rs"

[features]
default = ["centrality-degree"]  # Enable commonly used centrality by default
binaries = []
logging = []
all = [
    # Centrality features
    "centrality-betweenness",
    "centrality-closeness",
    "centrality-degree",
    "centrality-eigenvector",
    "centrality-harmonic",
    "centrality-katz",
    "centrality-other",
    "centrality-pagerank",
    # Community features
    "community-connected-components",
    "community-girvan-newman",
    "community-infomap",
    "community-label-propagation",
    "community-louvain",
    "community-personalized-pagerank",
    "community-spectral",
    # Links features
    "links-allocation",
    "links-attachment",
    "links-centrality",
    "links-cluster",
    "links-similarity",
    "links-soundarajan-hopcroft",
    # Approximation features
    "approximation-clique",
    "approximation-clustering",
    "approximation-connectivity",
    "approximation-diameter",
    "approximation-independent-set",
    "approximation-matching",
    "approximation-ramsey",
    "approximation-subgraph",
    "approximation-treewidth",
    "approximation-tsp",
    "approximation-vertex-cover",
]
# Centrality features
centrality-betweenness = []
centrality-closeness = []
centrality-degree = []
centrality-eigenvector = []
centrality-harmonic = []
centrality-katz = []
centrality-other = []
centrality-pagerank = []
# Community features
community-connected-components = []
community-girvan-newman = []
community-infomap = []
community-label-propagation = []
community-louvain = []
community-personalized-pagerank = []
community-spectral = []
# Links features
links-allocation = []
links-attachment = []
links-centrality = []
links-cluster = []
links-similarity = []
links-soundarajan-hopcroft = []
# Approximation features
approximation-clique = []
approximation-clustering = []
approximation-connectivity = []
approximation-diameter = []
approximation-independent-set = []
approximation-matching = []
approximation-ramsey = []
approximation-subgraph = []
approximation-treewidth = []
approximation-tsp = []
approximation-vertex-cover = []

[dependencies]
ctor = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.0"
sprs = "0.11.3"
ordered-float = "5.0.0"
rayon = "1.10.0"
nalgebra = "0.33.2"
petgraph = { version = "0.8.2", features = ["graphmap", "stable_graph", "matrix_graph", "serde-1", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
plotters = "0.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.5.0"

[[bench]]
name = "graph_benchmarks"
harness = false

# Ensure examples compile only when the necessary features are enabled.
[[example]]
name = "centrality"
required-features = [
    "centrality-degree",
    "centrality-eigenvector",
    "centrality-katz",
    "centrality-closeness",
    "centrality-pagerank"
]

[[example]]
name = "centrality_eigenvector"
required-features = ["centrality-eigenvector"]

[[example]]
name = "centrality_katz"
required-features = ["centrality-katz"]

[[example]]
name = "path_dijkstra"
# No feature-gated modules used here

[[example]]
name = "core_io"
# Uses core::io only; no extra features required

[[example]]
name = "visualization"
# Uses core visualization; not behind feature flags currently

[profile.release]
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
debug = true

[profile.test]
debug = true

[profile.example]
inherits = "release"

[package.metadata.rustfmt]
max_width = 100
hard_tabs = false
tab_spaces = 4

[workspace]
members = [
  ".",
  "pygraphina"
]
