[package]
name = "graphina-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
graphina = { path = ".." }

[[bin]]
name = "fuzz_graph_operations"
path = "fuzz_targets/fuzz_graph_operations.rs"
test = false
doc = false

[[bin]]
name = "fuzz_louvain"
path = "fuzz_targets/fuzz_louvain.rs"
test = false
doc = false

[profile.release]
debug = 1

