[package]
name = "pygraphina"
version = "0.2.0-a2"
edition = "2024"
publish = false

[lib]
name = "pygraphina"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.26.0", features = ["abi3-py310", "extension-module", "auto-initialize"] }
graphina = { path = "..", features = ["centrality", "approximation", "community", "links"] }
ordered-float = "5.0.0"
